# Python-Test-Automation

./: .gitignore  LICENSE
.github/workflows/: lab4_ci.yml
01_Unit Testing/vanerns_vanner/tests/: test_inventory.py
01_Unit Testing/weather/src/: weather_service.py
02_Integration Testing/BANK/src/: transaction.py
02_Integration Testing/Event_Register/: README.md
02_Integration Testing/Payment/: pytest.ini
02_Integration Testing/Payment/src/: order.py
03_Performance Testing/Insertion_sort/: README.md
03_Performance Testing/Insertion_sort/src/: Insertion_sort.py
03_Performance Testing/Merge_sort/src/: insertion_sort.py  merge_sort.py  quick_sort.py
04_Linting_benchmark/: .pylintrc  README.md  requirements.txt
05_BDD/Bank_Account/features/: bank.feature  (+1 more)
06_HTML_CSS/: Task_1a,1b,1c,1d.odt
06_HTML_CSS/Recreate_img/: index.html  style.css
06_HTML_CSS/biblioteket_ugglan/: index.html  style.css
06_HTML_CSS/old_letter/: letter.html  style.css
06_HTML_CSS/personal_portfolio/: home.html  style.css
06_HTML_CSS/receipe_blog/: receipe.html  style.css
07_E2E_Playwright/: Regexpressions.odt
07_E2E_Playwright/Test_Agile_Helper/: requirements.txt
LAB_2/BANK/: pytest.ini
LAB_2/Event_Register/: README.md  pyproject.toml  pytest.ini
LAB_2/Event_Register/src/: membership.py
LAB_2/Event_Register/tests/integration/: test_registration_integration.py
LAB_2/Event_Register/tests/unit/: test_members_unit.py
LAB_3/Insertion_sort/: requirements.txt
LAB_3/Merge_sort/: README.md  pytest.ini
LAB_4/: README.md  pytest.ini  requirements.txt  setup.cfg
(+42 files in other folders)
